--- a/OATH.Net/OATH.Net.csproj
+++ b/OATH.Net/OATH.Net.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MiscExtensions.cs" />
+    <Compile Include="TimeBasedOtp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
