--- a/packages/NUnit.2.5.10.11092/tools/nunit.exe.config
+++ b/packages/NUnit.2.5.10.11092/tools/nunit.exe.config
@@ -14,10 +14,15 @@
 	-->
     <!-- <add key="helpUrl" value="http://www.nunit.org" /> -->
   </appSettings>
-
+  <startup>
+    <supportedRuntime version="v4.0.30319" />
+    <supportedRuntime version="v2.0.50727" />
+  </startup>
   <runtime>
     <!-- We need this so test exceptions don't crash NUnit -->
     <legacyUnhandledExceptionPolicy enabled="1" />
+
+    <loadFromRemoteSources enabled="true" />
 
     <!-- Look for addins in the addins directory for now -->
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
