--- a/OATH.Net/OATH.Net.csproj
+++ b/OATH.Net/OATH.Net.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CounterBasedOtp.cs" />
     <Compile Include="MiscExtensions.cs" />
     <Compile Include="TimeBasedOtp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
