--- a/OATH.Net/OATH.Net.csproj
+++ b/OATH.Net/OATH.Net.csproj
@@ -1,6 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
+    <VersionMajor>0</VersionMajor>
+    <VersionMinor>1</VersionMinor>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GitDescribeCommand>
+      <![CDATA[
+        public static string ScriptMain()
+        {
+            System.Diagnostics.ProcessStartInfo psi = new System.Diagnostics.ProcessStartInfo()
+            {
+                FileName = @"$(MSBuildProgramFiles32)\Git\bin\git.exe",
+                UseShellExecute = false,
+                RedirectStandardOutput = true,
+                Arguments = "describe --always --long --dirty=-modified"
+            };
+            System.Diagnostics.Process process = System.Diagnostics.Process.Start(psi);
+            process.WaitForExit();
+            string result = process.StandardOutput.ReadToEnd();
+            int length = result.Length;
+            return result.Substring(0,length-1);
+        }    
+      ]]>
+    </GitDescribeCommand>
+  </PropertyGroup>
+  <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
@@ -49,14 +74,25 @@
     <Compile Include="TimeBasedOtpGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\CommonAssemblyInfo.cs" />
+    <Compile Include="Properties\VersionAssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildProjectDirectory)\..\packages\StyleCop\Microsoft.StyleCop.Targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
+  <Import Project="$(MSBuildProjectDirectory)\..\packages\MSBuildCommunityTasks\MSBuild.Community.Tasks.Targets" />
   <Target Name="BeforeBuild">
+    <Script Language="C#" Code="$(GitDescribeCommand)">
+      <Output TaskParameter="ReturnValue" PropertyName="GitDescribeResult"/>
+    </Script>
+    <Version BuildType="Automatic" RevisionType="Automatic">
+      <Output TaskParameter="Build" PropertyName="VersionBuild"/>
+      <Output TaskParameter="Revision" PropertyName="VersionRevision"/>
+    </Version>
+    <AssemblyInfo OutputFile="Properties\VersionAssemblyInfo.cs"
+                  CodeLanguage="CS"
+                  AssemblyVersion="$(VersionMajor).$(VersionMinor).0.0"
+                  AssemblyFileVersion="$(VersionMajor).$(VersionMinor).$(VersionBuild).$(VersionRevision)"
+                  AssemblyInformationalVersion="$(GitDescribeResult)"/>
   </Target>
   <Target Name="AfterBuild">
   </Target>
-  -->
 </Project>
