Added Base32 utility class, can convert binary to base32.

--- a/OATH.Net.Test/OATH.Net.Test.csproj
+++ b/OATH.Net.Test/OATH.Net.Test.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base32Tests.cs" />
     <Compile Include="KeyTests.cs" />
     <Compile Include="MiscExtensionsTests.cs" />
     <Compile Include="CounterBasedOtpGeneratorTests.cs" />
