--- a/OATH.Net/OATH.Net.csproj
+++ b/OATH.Net/OATH.Net.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base32.cs" />
     <Compile Include="Key.cs" />
     <Compile Include="SHA512HMACAlgorithm.cs" />
     <Compile Include="SHA256HMACAlgorithm.cs" />
