--- a/OATH.Net/OATH.Net.csproj
+++ b/OATH.Net/OATH.Net.csproj
@@ -1,77 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D3842881-C2F4-44A7-AE51-5BC041B7B2FD}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OathNet</RootNamespace>
-    <AssemblyName>OATH.Net</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\OATH.Net.xml</DocumentationFile>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Base32.cs" />
-    <Compile Include="Key.cs" />
-    <Compile Include="SHA512HMACAlgorithm.cs" />
-    <Compile Include="SHA256HMACAlgorithm.cs" />
-    <Compile Include="CounterBasedOtpGenerator.cs" />
-    <Compile Include="IHMACAlgorithm.cs" />
-    <Compile Include="SHA1HMACAlgorithm.cs" />
-    <Compile Include="TimeBasedOtpGenerator.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\CommonAssemblyInfo.cs" />
-    <Compile Include="Properties\VersionAssemblyInfo.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildProjectDirectory)\..\packages\StyleCop\Microsoft.StyleCop.Targets" />
-  <Import Project="$(MSBuildProjectDirectory)\..\packages\MSBuildCommunityTasks\MSBuild.Community.Tasks.Targets" />
-  <Import Project="$(MSBuildProjectDirectory)\..\packages\SemVerHarvester.0.3.0\msbuild\SemVerHarvester.Targets" />
-  <Target Name="BeforeBuild">
-    <SemVerGitHarvester GitPath="C:\Program Files (x86)\Git\bin\git.exe">
-      <Output TaskParameter="MajorVersion" PropertyName="MajorVersion" />
-      <Output TaskParameter="MinorVersion" PropertyName="MinorVersion" />
-      <Output TaskParameter="PatchVersion" PropertyName="PatchVersion" />
-      <Output TaskParameter="RevisionVersion" PropertyName="RevisionVersion" />
-      <Output TaskParameter="ModifiedString" PropertyName="ModifiedString" />
-      <Output TaskParameter="CommitId" PropertyName="CommitId" />
-    </SemVerGitHarvester>
-    <AssemblyInfo OutputFile="Properties\VersionAssemblyInfo.cs"
-                  CodeLanguage="CS"
-                  AssemblyVersion="$(MajorVersion).$(MinorVersion).0.0"
-                  AssemblyFileVersion="$(MajorVersion).$(MinorVersion).$(PatchVersion).$(RevisionVersion)"
-                  AssemblyInformationalVersion="$(MajorVersion).$(MinorVersion).$(PatchVersion).$(RevisionVersion) ($(CommitId))$(ModifiedString)" />
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
+
 </Project>
